Added meta tags

--- a/salaries/index.html
+++ b/salaries/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="salaries-stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Analyzing NYC payroll data</title>
+    <meta name="description" content="">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/salaries/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Analyzing NYC payroll data">
+    <meta property="og:description" content="In the five-year period from 2017 to the end of 2021, the city spent nearly two billion dollars each year on
+    overtime.">
+    <meta property="og:image" content="https://areenaarora.com/salaries/cover-money.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/salaries/">
+    <meta name="twitter:title" content="Analyzing NYC payroll data">
+    <meta name="twitter:description" content="In the five-year period from 2017 to the end of 2021, the city spent nearly two billion dollars each year on
+    overtime.">
+    <meta name="twitter:image" content="https://areenaarora.com/salaries/cover-money.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -876,8 +902,11 @@
             questions: Is there a more efficient way to work so you’re not spending too much on overtime," she said.
         </p>
         <p>The three uniformed ones — New York Police, Fire Department, and Department of Correction spent
-            the most on overtime. Notably, over 300 employees from these agencies clocked over 1500 hours in overtime each year, on top of working regular 2,040 hours a year on average. Six of them are no longer on the city's payroll.</p>
-        <p>While the Department of Corrections has one fourth the number of employees as the NYPD on its payroll, it is among
+            the most on overtime. Notably, over 300 employees from these agencies clocked over 1500 hours in overtime
+            each year, on top of working regular 2,040 hours a year on average. Six of them are no longer on the city's
+            payroll.</p>
+        <p>While the Department of Corrections has one fourth the number of employees as the NYPD on its payroll, it is
+            among
             the highest spenders of overtime pay.
         </p>
         <p>Most notably, a warden assistant for the agency clocked in 3,147 hours in overtime in 2020, in addition to
@@ -900,6 +929,6 @@
             purposes. “It’s raw, dirty data,” he added.
         </p>
         <p class="code-block"><a href="https://github.com/areenaarora/city-employees-salaries">
-            If you'd like to check the code for this project, click here!</a></p>
+                If you'd like to check the code for this project, click here!</a></p>
     </div>
 </body>
