--- a/salaries/index.html
+++ b/salaries/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Analyzing NYC payroll data">
     <meta property="og:description" content="In the five-year period from 2017 to the end of 2021, the city spent nearly two billion dollars each year on overtime.">
-    <meta property="og:image" content="https://areenaarora.com/salaries/cover-money.jpg">
+    <meta property="og:image" content="https://areenaarora.com/salaries/money.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://areenaarora.com/salaries/">
     <meta name="twitter:title" content="Analyzing NYC payroll data">
     <meta name="twitter:description" content="In the five-year period from 2017 to the end of 2021, the city spent nearly two billion dollars each year on overtime.">
-    <meta name="twitter:image" content="https://areenaarora.com/salaries/cover-money.jpg">
+    <meta name="twitter:image" content="https://areenaarora.com/salaries/money.jpg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
