--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Election mapping exercise</h1>
     <div id='map'></div>
+    <div id="mapNew"></div>
     <script type='text/javascript' src="map.js"></script>
 </body>
 
