--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +13,14 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Election mapping exercise</h1>
-    <div id='map'></div>
-    <div id="mapNew"></div>
-    <script type='text/javascript' src="map.js"></script>
+    <div class="center-content-maps">
+        <h2>Mapping the 2020 US presidential election results</h2>
+        <div id='map'></div>
+        <div id="mapNew"></div>
+        <script type='text/javascript' src="map.js"></script>
+    </div>
 </body>
 
 </html>
