--- a/mapping/index.html
+++ b/mapping/index.html
@@ -27,6 +27,8 @@
         <h1>Welcome to my mapping adevntures! 🗺</h1>
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
-        <h3 class="highlighted-words">Stay tuned!</h3>
+            
+        <h3 class="highlighted-words">Stay tuned for more!</h3>
+
     </div>
 </body>
