--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -17,6 +17,7 @@
 <body>
     <div class="center-content-maps">
         <h2>Mapping the 2020 US presidential election results</h2>
+        <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and tried two different formats.</p>
         <div id='map'></div>
         <div id="mapNew"></div>
         <script type='text/javascript' src="map.js"></script>
