--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="../../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2020 Election Results Map</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
-
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <title>2020 Election Results Map</title>
 </head>
 
 <body>
     <div class="center-content-maps">
         <h2>Mapping the 2020 US presidential election results</h2>
-        <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and tried two different formats.</p>
+        <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and
+            tried two different formats.</p>
         <div id='map'></div>
         <div id="mapNew"></div>
         <script type='text/javascript' src="map.js"></script>
