--- a/index.html
+++ b/index.html
@@ -85,16 +85,17 @@
                 <a href="/salaries/" target="_blank">
                     <p class="card-headline">ANALYZING NYC PAYROLL</p>
                     <img src="./card-photos/money.jpg" alt="Money" style="width:100%">
-                    <p class="card-description">The city knows it has a problem with overtime pay — across different agencies and different levels of pay ...
+                    <p class="card-description">The city knows it has a problem with overtime pay — across different
+                        agencies and different levels of pay ...
                     </p>
                 </a>
             </div>
             <div class="each-card">
-                <a href="/street-flooding/" target="_blank">
-                    <p class="card-headline">STREET FLOODING IN NYC</p>
-                    <img src="./card-photos/nyc-stree-flooding.jpg" alt="Street Flooding" style="width:100%">
-                    <p class="card-description">Between January 1, 2020, and March 31, 2022, New Yorkers lodged over
-                        67,000 street flooding-related complaints with the city government ...
+                <a href="/mapping/" target="_blank">
+                    <p class="card-headline">LEARNING MAPPING</p>
+                    <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
+                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
+                        summer
                     </p>
                 </a>
             </div>
@@ -110,12 +111,11 @@
                 </a>
             </div>
             <div class="each-card">
-                <a href="/discretionary-funds/" target="_blank">
-                    <p class="card-headline">CITY COUNCIL'S DISCRETIONARY FUNDS</p>
-                    <img src="./card-photos/people.jpg" alt="Generic image of people walking"
-                        style="width:100%; height:210px">
-                    <p class="card-description">New York City Family Unity Project is the country’s first public program
-                        for immigrants facing deportation, started in the city ...
+                <a href="/street-flooding/" target="_blank">
+                    <p class="card-headline">STREET FLOODING IN NYC</p>
+                    <img src="./card-photos/nyc-stree-flooding.jpg" alt="Street Flooding" style="width:100%">
+                    <p class="card-description">Between January 1, 2020, and March 31, 2022, New Yorkers lodged over
+                        67,000 street flooding-related complaints with the city government ...
                     </p>
                 </a>
             </div>
@@ -136,22 +136,22 @@
                     </p>
                 </a>
             </div>
-
+            <div class="each-card">
+                <a href="/discretionary-funds/" target="_blank">
+                    <p class="card-headline">CITY COUNCIL'S DISCRETIONARY FUNDS</p>
+                    <img src="./card-photos/people.jpg" alt="Generic image of people walking"
+                        style="width:100%; height:210px">
+                    <p class="card-description">New York City Family Unity Project is the country’s first public program
+                        for immigrants facing deportation, started in the city ...
+                    </p>
+                </a>
+            </div>
             <div class="each-card">
                 <a href="/uttarakhand-floods/" target="_blank">
                     <p class="card-headline">REMEMBERING UTTARAKHAND FLOODS</p>
                     <img src="./card-photos/uttarakhand.jpg" alt="Mountains" style="width:100%">
                     <p class="card-description">The rock has since been named “Bhim Shila”, meaning the divine rock.
                         Pilgrims now pray in front of the rock, seeking its blessings, Guru added ...</p>
-                </a>
-            </div>
-            <div class="each-card">
-                <a href="/mapping/" target="_blank">
-                    <p class="card-headline">LEARNING MAPPING</p>
-                    <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
-                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
-                        summer
-                    </p>
                 </a>
             </div>
             <div class="each-card">
