Updated election maps page

--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -18,13 +18,16 @@
 </head>
 
 <body>
-    <div class="center-content-maps">
+    <div class="center-content">
         <h2>Mapping the 2020 US presidential election results</h2>
+        <h3>Intro to web mapping</h3>
         <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and
             tried two different formats.</p>
-        <div id='map'></div>
-        <div id="mapNew"></div>
-        <script type='text/javascript' src="map.js"></script>
+            <p>The first is a choropleth, famously called a heatmap. Such maps are used most commonly to show election results, climate change and weather-related storiea.</p>
+    </div>
+    <div id='map'></div>
+    <div id="mapNew"></div>
+    <script type='text/javascript' src="map.js"></script>
     </div>
 </body>
 
