Red color code-- adjusted

--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -23,7 +23,10 @@
         <h3>Intro to web mapping</h3>
         <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and
             tried two different formats.</p>
-            <p>The first is a choropleth, famously called a heatmap. Such maps are used most commonly to show election results, climate change and weather-related storiea.</p>
+            <p>Both maps are interactive and showcase the same data.</p>
+            <p>The first is a choropleth, famously called a heatmap. Such maps are used most commonly to show election results, climate change and weather-related storiea. The second is a graduated point map.</p>
+            <p>Both maps show data at a county level. </p>
+            
     </div>
     <div id='map'></div>
     <div id="mapNew"></div>
