--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -25,7 +25,7 @@
             tried two different formats.</p>
             <p>Both maps are interactive and showcase the same data.</p>
             <p>The first is a choropleth, famously called a heatmap. Such maps are used most commonly to show election results, climate change and weather-related storiea. The second is a graduated point map.</p>
-            <p>Both maps show data at a county level. </p>
+            <p>Both maps show data at a county level. Election maps should be easily readable, nuanced and accurate. The New York Times wrote in great detail about the merits of different kinds of election maps.</p>
             
     </div>
     <div id='map'></div>
