--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -56,7 +56,9 @@
         <p>This first map is a choropleth, famously called a heatmap. Such maps are used most commonly to show election
             results, climate change and weather-related storiea.
         </p>
-        <div id='map'></div>
+    </div>
+    <div id='map'></div>
+    <div class="center-content">
         <p>While it's easy to see patterns in such a map, it's just as easy to miss the nuances. Let's try another one!
         </p>
         <p>The second is a graduated point map.</p>
