Added second map

--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="center-content">
         <h1>Mapping the 2020 US presidential election results</h1>
-        <h2>Intro to web mapping</h2>
+        <h2>~Intro to web mapping</h2>
         <p>This is my first attempt at creating interactive web maps. For this exercise, I worked with election data and
             tried two different formats.</p>
         <p>Both maps are interactive and showcase the same data.</p>
@@ -64,6 +64,7 @@
         <p>The second is a graduated point map.</p>
     </div>
     <div id="mapNew"></div>
+    <p>While this is a tad more nuanced; the problem here is that areas with more population (represented with bigger dots) take over smaller ones.</p>
     <script type='text/javascript' src="map.js"></script>
     </div>
 </body>
