Added election map on mapping landing page

--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -64,7 +64,10 @@
         <p>The second is a graduated point map.</p>
     </div>
     <div id="mapNew"></div>
-    <p>While this is a tad more nuanced; the problem here is that areas with more population (represented with bigger dots) take over smaller ones.</p>
+    <div class="center-content">
+        <p>While this is a tad more nuanced; the problem here is that areas with more population (represented with
+            bigger dots) take over smaller ones.</p>
+    </div>
     <script type='text/javascript' src="map.js"></script>
     </div>
 </body>
