--- a/mapping/index.html
+++ b/mapping/index.html
@@ -27,7 +27,17 @@
         <h1>Welcome to my mapping adevntures! 🗺</h1>
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
-            
+        <p>Here's my first couple of maps!</p>
+        <div class="cards-wrapper">
+            <div class="each-card">
+                <a href="/mapping/election-map/" target="_blank">
+                    <p class="card-headline">WEB-MAPPING WITH MAPBOX</p>
+                    <img src="./election-map/map-image.png" alt="Map" style="width:100%">
+                    <p class="card-description">I made two election maps using Mapbox!
+                    </p>
+                </a>
+            </div>
+        </div>
         <h3 class="highlighted-words">Stay tuned for more!</h3>
 
     </div>
