--- a/mapping/index.html
+++ b/mapping/index.html
@@ -12,6 +12,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <!-- Meta tags -->
+
+    <!-- HTML Meta Tags -->
+    <title>Mapping!</title>
+    <meta name="description" content="A bunch of maps by yours truly!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mapping!">
+    <meta property="og:description" content="A bunch of maps by yours truly!">
+    <meta property="og:image" content="www.areenaarora.com/card-photos/map.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/">
+    <meta name="twitter:title" content="Mapping!">
+    <meta name="twitter:description" content="A bunch of maps by yours truly!">
+    <meta name="twitter:image" content="www.areenaarora.com/card-photos/map.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <title>Mapping!</title>
 </head>
 
