--- a/mapping/index.html
+++ b/mapping/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Mapping!">
     <meta property="og:description" content="A bunch of maps by yours truly!">
-    <meta property="og:image" content="www.areenaarora.com/card-photos/map.jpg">
+    <meta property="og:image" content="www.areenaarora.com/card-photos/map.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
     <meta property="twitter:url" content="https://areenaarora.com/mapping/">
     <meta name="twitter:title" content="Mapping!">
     <meta name="twitter:description" content="A bunch of maps by yours truly!">
-    <meta name="twitter:image" content="www.areenaarora.com/card-photos/map.jpg">
+    <meta name="twitter:image" content="www.areenaarora.com/card-photos/map.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
