--- a/mapping/index.html
+++ b/mapping/index.html
@@ -31,7 +31,28 @@
     <meta property="twitter:url" content="https://areenaarora.com/mapping/">
     <meta name="twitter:title" content="Mapping!">
     <meta name="twitter:description" content="A bunch of maps by yours truly!">
+    <meta name="twitter:image" content="
+    <!-- HTML Meta Tags -->
+    <title>Mapping!</title>
+    <meta name=" description" content="A bunch of maps by yours truly!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mapping!">
+    <meta property="og:description" content="A bunch of maps by yours truly!">
+    <meta property="og:image" content="www.areenaarora.com/card-photos/map.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/">
+    <meta name="twitter:title" content="Mapping!">
+    <meta name="twitter:description" content="A bunch of maps by yours truly!">
     <meta name="twitter:image" content="www.areenaarora.com/card-photos/map.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    ">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
