--- a/mapping/election-map/index.html
+++ b/mapping/election-map/index.html
@@ -67,7 +67,7 @@
     <div class="center-content">
         <p>While this is a tad more nuanced; the problem here is that areas with more population (represented with
             bigger dots) take over smaller ones.</p>
-        <h3> About the project and how it was done:</h3>
+        <h3>Tools used:</h3>
         <p>For the base map, I designed a template on <a href="https://www.mapbox.com/" target="_blank">MapBox</a></p>
         <p>The data was processed in Python on a Google Colab notebook.</p>
     </div>
