--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <a href="/salaries/" target="_blank">
                     <p class="card-headline">ANALYZING NYC PAYROLL</p>
                     <img src="./card-photos/money.jpg" alt="Money" style="width:100%">
-                    <p class="card-description">The city knows it has a problem with overtime pay — across different
-                        agencies and different levels of pay ...
+                    <p class="card-description">Between 2017 and 2021, some city employees clocked in more overtime hours than regular hours ...
                     </p>
                 </a>
             </div>
