--- a/mapping/index.html
+++ b/mapping/index.html
@@ -72,7 +72,7 @@
         <h1>Welcome to my mapping adevntures! 🗺</h1>
 
         <h4>TEMPORARY NOTE: My maps broke in transferring them over to my website's repo. I'll have these fixed by tonight</h4>
-        
+
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
         <p>Here's my first couple of maps!</p>
@@ -94,9 +94,9 @@
                 </a>
             </div>
             <div class="each-card">
-                <a href="/mapping/election-map/" target="_blank">
+                <a href="/mapping/typology-map/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Dominant industries</p>
-                    <img src="./election-map/map-image.png" alt="Map" style="width:100%">
+                    <!-- <img src="./election-map/map-image.png" alt="Map" style="width:100%"> -->
                     <p class="card-description">A map on each state's most dominant industry
                     </p>
                 </a>
