--- a/mapping/index.html
+++ b/mapping/index.html
@@ -71,7 +71,7 @@
         </nav>
         <h1>Welcome to my mapping adevntures! 🗺</h1>
 
-        <h3>TEMPORARY NOTE: My maps broke in transferring them over to my website's repo. I'll have these fixed by tonight</h3>
+        <h3 class="highlighted-words">TEMPORARY NOTE: My maps broke in transferring them over to my website's repo. I'm working on fixing them!</h3>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
