CSS update for mapping page

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
-    <link rel="stylesheet" href="../stylesheets/aboutme-stylesheet.css">
+    <link rel="stylesheet" href="mapping-styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,10 +50,6 @@
     <meta name="twitter:title" content="Mapping!">
     <meta name="twitter:description" content="A bunch of maps by yours truly!">
     <meta name="twitter:image" content="www.areenaarora.com/card-photos/map.png">
-
-    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    ">
-
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!--  -->
@@ -65,13 +61,11 @@
         <nav>
             <a href="../">
                 <p>
-                    <span style="font-weight:bolder; font-size: 28px;"> HOME </span>
+                    <span style="font-weight:bolder; font-size: 28px; color: white;"> HOME </span>
                 </p>
             </a>
         </nav>
         <h1>Welcome to my mapping adevntures! 🗺</h1>
-
-        <h3 class="highlighted-words">TEMPORARY NOTE: My maps broke in transferring them over to my website's repo. I'm working on fixing them!</h3>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
