--- a/mapping/index.html
+++ b/mapping/index.html
@@ -80,15 +80,7 @@
                 </a>
             </div>
             <div class="each-card">
-                <a href="/mapping/police-map/" target="_blank">
-                    <p class="card-headline">WEB-MAPPING WITH MAPBOX: Police Brutality</p>
-                    <!-- <img src="./election-map/map-image.png" alt="Map" style="width:100%"> -->
-                    <p class="card-description">A map on police brutality by state
-                    </p>
-                </a>
-            </div>
-            <div class="each-card">
-                <a href="/mapping/typology-map/" target="_blank">
+                <a href="/mapping/counties-typology/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Dominant industries</p>
                     <!-- <img src="./election-map/map-image.png" alt="Map" style="width:100%"> -->
                     <p class="card-description">A map on each state's most dominant industry
