--- a/mapping/counties-typology/index.html
+++ b/mapping/counties-typology/index.html
@@ -31,4 +31,8 @@
                 <div><span style="background-color: #e6f5c9"></span>Nonspecialized</div>
             </div>
         </div>
+        <script type='text/javascript' src="map.js"></script>
     </div>
+</body>
+
+</html>
