--- a/mapping/counties-typology/index.html
+++ b/mapping/counties-typology/index.html
@@ -13,16 +13,15 @@
 <body>
     <div id='map'>
         <div id='title'>
-            <h1>Manufacturing and farming are the most common industries among counties with specialized economic types
+            <h1>Manufacturing and farming are the most common dominant industries in US counties
             </h1>
-            <p>Data shown here comes from the <a
+            <p>Data source: <a
                     href='https://www.ers.usda.gov/data-products/county-typology-codes.aspx'>U.S. Department of
-                    Agriculture's Economic Research Service</a>. Each county is assigned a primary industry dependence,
-                visualized here. This data was published in 2015.</p>
+                    Agriculture's Economic Research Service</a>. Each county is assigned a primary industry,
+                visualized here. The data was published in 2015.</p>
             <hr>
             <div id="economic-legend">
-                <h4>County Economic Type</h4>
-                <p><em>Click on each county for detailed economic information</em></p>
+                <h4>Click on each county for more details!</h4>
 
                 <div><span style="background-color: #b3e2cd"></span>Farming</div>
                 <div><span style="background-color: #f4cae4"></span>Federal/State Government</div>
