--- a/mapping/counties-typology/index.html
+++ b/mapping/counties-typology/index.html
@@ -7,6 +7,12 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../stylesheets/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../../favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Counties Map</title>
 </head>
 
@@ -15,8 +21,8 @@
         <div id='title'>
             <h1>Manufacturing and farming are the most common dominant industries in US counties
             </h1>
-            <p>Data source: <a
-                    href='https://www.ers.usda.gov/data-products/county-typology-codes.aspx'>U.S. Department of
+            <p>Data source: <a href='https://www.ers.usda.gov/data-products/county-typology-codes.aspx'>U.S. Department
+                    of
                     Agriculture's Economic Research Service</a>. Each county is assigned a primary industry,
                 visualized here. The data was published in 2015.</p>
             <hr>
