--- a/mapping/index.html
+++ b/mapping/index.html
@@ -82,7 +82,7 @@
             <div class="each-card">
                 <a href="/mapping/counties-typology/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Dominant industries</p>
-                    <!-- <img src="./election-map/map-image.png" alt="Map" style="width:100%"> -->
+                    <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
                     <p class="card-description">A map on each state's most dominant industry
                     </p>
                 </a>
