--- a/mapping/citibikes/index.html
+++ b/mapping/citibikes/index.html
@@ -15,6 +15,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <!-- META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Citi Bike map</title>
+    <meta name="description" content="Mapping data from Citi Bikes!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/citibikes/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Citi Bike map">
+    <meta property="og:description" content="Mapping data from Citi Bikes!">
+    <meta property="og:image" content="https://areenaarora.com/mapping/citibikes/map-image.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/citibikes/">
+    <meta name="twitter:title" content="Citi Bike map">
+    <meta name="twitter:description" content="Mapping data from Citi Bikes!">
+    <meta name="twitter:image" content="https://areenaarora.com/mapping/citibikes/map-image.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
 </head>
 
 <body>
