--- a/mapping/index.html
+++ b/mapping/index.html
@@ -75,16 +75,21 @@
                 <a href="/mapping/election-map/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Election results</p>
                     <img src="./election-map/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">I made two election maps using Mapbox!
-                    </p>
+                    <p class="card-description">I made two election maps using Mapbox!</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/counties-typology/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Dominant industries</p>
                     <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
-                    <p class="card-description">A map on each state's most dominant industry
-                    </p>
+                    <p class="card-description">A map on each state's most dominant industry</p>
+                </a>
+            </div>
+            <div class="each-card">
+                <a href="/mapping/citibikes/" target="_blank">
+                    <p class="card-headline">WEB-MAPPING WITH MAPBOX: Citi Bikes data</p>
+                    <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
+                    <p class="card-description">Four interactive maps showing data from Citi Bikes</p>
                 </a>
             </div>
         </div>
