--- a/mapping/index.html
+++ b/mapping/index.html
@@ -88,7 +88,7 @@
             <div class="each-card">
                 <a href="/mapping/citibikes/" target="_blank">
                     <p class="card-headline">WEB-MAPPING WITH MAPBOX: Citi Bikes data</p>
-                    <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
+                    <img src="./citibikes/map-image.png" alt="Map" style="width:100%">
                     <p class="card-description">Four interactive maps showing data from Citi Bikes</p>
                 </a>
             </div>
