--- a/mapping/index.html
+++ b/mapping/index.html
@@ -65,7 +65,7 @@
                 </p>
             </a>
         </nav>
-        <h1>Welcome to my mapping adevntures!🚀🗺</h1>
+        <h1>Welcome to my mapping adventures!🚀🗺</h1>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
