--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -17,6 +17,22 @@
 </head>
 
 <body>
+    <div class="center-content">
+        <h1>Mapping natural disasters in India</h1>
+        <p>For this mapping exercise, I used geocoded disasters data from NASA's Socioeconomic  </p>
+
+        <div id="disaster-legend" class="legend2">
+            <h4>Natural Disasters by Type</h4>
+            <p><em>Click on each dot for the date and location of each natural disaster</em></p>
+            <div><span style="background-color: #264653"></span>Storm</div>
+            <div><span style="background-color: #2a9d8f"></span>Flood</div>
+            <div><span style="background-color: #e76f51"></span>Extreme Temperature</div>
+            <div><span style="background-color: #e9c46a"></span>Drought</div>
+            <div><span style="background-color: #91b66e"></span>Earthquake</div>
+            <div><span style="background-color: #f4a261"></span>Landslide</div>
+            <div><span style="background-color: #6b2737"></span>Volcanic Activity</div>
+        </div>
+    </div>
     <div id="map"></div>
     <script type='text/javascript' src="map.js"></script>
 </body>
