--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="center-content">
         <h1>Mapping natural disasters in India</h1>
-        <p>For this mapping exercise, I used geocoded disasters data from <a href="https://sedac.ciesin.columbia.edu/data/set/pend-gdis-1960-2018/data-download" target="_blank">NASA's Socioeconomic Data and Applications Center</a></p>
+        <p>For this mapping exercise, I used geocoded disasters data from <a href="https://sedac.ciesin.columbia.edu/data/set/pend-gdis-1960-2018/data-download" target="_blank"><span style="color:#ea624e;">NASA's Socioeconomic Data and Applications Center</span></a></p>
 
         <div id="disaster-legend" class="legend2">
             <h4>Natural Disasters by Type</h4>
