--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -24,15 +24,18 @@
         <div id="disaster-legend" class="legend2">
             <h4>Natural Disasters by Type</h4>
             <p><em>Click on each dot for the date and location of each natural disaster</em></p>
-            <div><span style="background-color: #264653"></span>Storm</div>
-            <div><span style="background-color: #2a9d8f"></span>Flood</div>
-            <div><span style="background-color: #e76f51"></span>Extreme Temperature</div>
-            <div><span style="background-color: #e9c46a"></span>Drought</div>
-            <div><span style="background-color: #91b66e"></span>Earthquake</div>
-            <div><span style="background-color: #f4a261"></span>Landslide</div>
-            <div><span style="background-color: #6b2737"></span>Volcanic Activity</div>
+            <div><span style="background-color: #59c3c3"></span>Storm</div>
+            <div><span style="background-color: #4062bb"></span>Flood</div>
+            <div><span style="background-color: #F12323"></span>Extreme Temperature</div>
+            <div><span style="background-color: #FCC772"></span>Drought</div>
+            <div><span style="background-color: #52489c"></span>Volcanic Activity</div>
+            <div><span style="background-color: #C16D47"></span>Earthquake</div>
+            <div><span style="background-color: #ebebeb"></span>Landslide</div>
         </div>
     </div>
     <div id="map"></div>
+    <div class="center-content">
+        <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it just to keep natural disasters specific to India. At a glance, draughts are the most common disaster in India.</p>
+        </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
