--- a/mapping/index.html
+++ b/mapping/index.html
@@ -73,6 +73,13 @@
         <p>Here's my first couple of maps!</p>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/mapping/natural-disasters/" target="_blank">
+                    <p class="card-headline">WEB-MAPPING: Natural disasters</p>
+                    <img src="./election-map/map-image.png" alt="Map" style="width:100%">
+                    <p class="card-description">I made two election maps using Mapbox!</p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="/mapping/election-map/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Election results</p>
                     <img src="./election-map/map-image.png" alt="Map" style="width:100%">
